@@ -1,5 +1,11 @@
 2004-05-14  Lassi A. Tuura  <lat@iki.fi>
 
+	* IgProf.cc: Properly check if the program is multi-threaded and
+	remember that in all decisions.  Mark program non-threaded when we
+	are quitting to avoid invoking into pthreads in destructors
+	(e.g. from late-delivered profile signal).  Try to work around
+	bugs in linux recursive mutex handling within signals.
+
 	* IgProfMem.cc (add): Live counter is cumulative, not maxed.
 
 	* IgProf.cc, IgProfMem.cc, IgProfFileDesc.cc: Trap all functions
